<resources>
    <string name="app_name">Køreskolpriser</string>
    <string name="soeg">Søg</string>
    <string name="flere_filtre">flere filtre..</string>
    <string name="login">Login som køreskole</string>
    <string name="find">Find køreskoler</string>
    <string name="type">Type korekort_type:</string>
    <string name="postnummer">Postnummer:</string>
    <string name="pris">Pris:</string>
    <string name="koen">Køn:</string>
    <string name="mand">Mand</string>
    <string name="kvinde">Kvinde</string>
    <string name="stoerrelse">Størrelse:</string>
    <string name="dage">Ønskede dage:</string>
    <string name="maerke">Bilmærke</string>
    <string name="lynkursus">Lynkursus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
